Updating DLL of LethalAPI.Terminal

--- a/Anubis.LC.ExtraDays/Anubis.LC.ExtraDays.csproj
+++ b/Anubis.LC.ExtraDays/Anubis.LC.ExtraDays.csproj
@@ -42,7 +42,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="LethalAPI.TerminalCommands">
-      <HintPath>..\..\lib\LethalAPI.TerminalCommands.dll</HintPath>
+      <HintPath>..\..\lib\LethalAPI.Terminal.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Netcode.Runtime">
       <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\Lethal Company\Lethal Company_Data\Managed\Unity.Netcode.Runtime.dll</HintPath>
