--- a/Anubis.LC.ExtraDays/Anubis.LC.ExtraDays.csproj
+++ b/Anubis.LC.ExtraDays/Anubis.LC.ExtraDays.csproj
@@ -41,7 +41,7 @@
       <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\Lethal Company\Lethal Company_Data\Managed\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="LethalAPI.TerminalCommands">
+    <Reference Include="LethalAPI.Terminal">
       <HintPath>..\..\lib\LethalAPI.Terminal.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Netcode.Runtime">
